Github live pages overflow fix v4
Max-width toegevoegd aan .main & padding verwijderd article.

--- a/styles/style.css
+++ b/styles/style.css
@@ -233,6 +233,7 @@ hr {
     grid-template-rows: repeat(2, 1fr);
     gap: 3em;
     margin: 3em;
+    max-width: 100vw;
 
     @media screen and (min-width: 878px) {
         display: grid;
@@ -243,7 +244,7 @@ hr {
     article {
         place-items: center;
         text-align: center;
-        padding: 1.5em;
+        /* padding: 1.5em; */
         box-shadow: var(--cards-box-shadow-lm);
         border-radius: var(--border-radius-cards);
         background: linear-gradient(
